# SmoothCrawler-AppIntegration

./: .coveragerc  .gitignore  Dockerfile_pytest  README.md  docker-compose_pytest.yaml  pyproject.toml  pytest.ini  pytest_Dockerfile  pytest_docker-compose.yaml  pytest_http_server_Dockerfile  requirements-test.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ci-config/: testing.env
.github/workflows/: ci-cd.yml  run_test_items_via_pytest_with_msg_queue_sys.yaml
appintegration/: __init__.py  arguments.py  crawler.py  factory.py  url.py
appintegration/_utils/file/: __init__.py  format.py  saver.py
appintegration/role/: __init__.py  framework.py  processor.py  source.py
appintegration/task/: __init__.py  filebased.py  framework.py  messagequeue.py
requirements/: requirements-doc.txt  requirements-test.txt
scripts/: get-integration-test-paths.sh
scripts/ci/: check_msg_sys_connection.sh  check_zookeeper-ip.sh  export_env-vars.sh  export_env.sh  get-integration-test-paths.sh  get-unit-test-paths.sh  run_pytest_with_env-vars.sh
scripts/docker/: run-pytest.sh
smoothcrawler_appintegration/: __init__.py  __pkg_info__.py  arguments.py  components.py  url.py
smoothcrawler_appintegration/_utils/file/: saver.py
smoothcrawler_appintegration/role/: framework.py
smoothcrawler_appintegration/task/: __init__.py  framework.py  messagequeue.py
test/: _config.py  _data.py  _utils.py
test/_http_server/: app.py
test/integration_test/: _config.py
test/unit_test/: _config.py  _data.py  _dummy_objs.py  arguments.py  factory.py  url.py
(+26 files in other folders)
