
[tool.poetry]
name = "SmoothCrawler-AppIntegration"
version = "0.1.0"
description = "Build decentralized crawler with application integration."
authors = ["Liu, Bryant"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.6"
smoothcrawler = "^0.2.0"

[tool.poetry.group.dev.dependencies]
kafka-python = "^2.0.2"
pika = "^1.2.1"
"stomp.py" = "^8.0.1"
openpyxl = "^2.6.1"
pytest = "^7.0.0"
pytest-cov = "^3.0.0"
pytest-html = "^3.1.1"
pytest-rerunfailures = "^10.2"
coverage = "^6.2"
codecov = "^2.1.12"
coveralls = "^3.3.1"
aiohttp = "^3.8.1"
urllib3 = "^1.26.8"
requests = "^2.27.1"
beautifulsoup4 = "^4.10.0"
mysql-connector-python = "^8.0.28"
tox = "^3.25.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
